fix blog wrap

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -18,7 +18,7 @@
 	float: left;
 	width: 40%;
 	height: auto;
-	margin: 20px;
+	margin: 10px;
   padding: 0;
   box-shadow: .125rem .125rem 1rem rgba(0,0,0,.2);
   background-color: var(--gray-bg);
